force-app/main/default/objects/Flight__c/fields/Delay_banner__c.field-meta.xml
<CustomField>
    <fullName>Delay_banner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Delay banner</label>
    <type>Checkbox</type>
</CustomField>