force-app/main/default/objects/Flight__c/fields/Delayed__c.field-meta.xml
<CustomField>
    <fullName>Delayed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Delayed</label>
    <type>Checkbox</type>
</CustomField>