force-app/main/default/objects/Flight__c/fields/Destination_Time__c.field-meta.xml
<CustomField>
    <fullName>Destination_Time__c</fullName>
    <label>Destination Time</label>
    <type>DateTime</type>
</CustomField>