force-app/main/default/objects/Flight__c/fields/Diverted_Airport__c.field-meta.xml
<CustomField>
    <fullName>Diverted_Airport__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Diverted Airport</label>
    <referenceTo>Airport__c</referenceTo>
    <relationshipLabel>Flight (Diverted Airport)</relationshipLabel>
    <relationshipName>Flight2</relationshipName>
    <type>Lookup</type>
</CustomField>