force-app/main/default/objects/Flight__c/fields/End_Airport__c.field-meta.xml
<CustomField>
    <fullName>End_Airport__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>End Airport</label>
    <referenceTo>Airport__c</referenceTo>
    <relationshipLabel>Flight (End Airport)</relationshipLabel>
    <relationshipName>Flight1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>