force-app/main/default/objects/Flight__c/fields/Start_Airport__c.field-meta.xml
<CustomField>
    <fullName>Start_Airport__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Start Airport</label>
    <referenceTo>Airport__c</referenceTo>
    <relationshipLabel>Flight</relationshipLabel>
    <relationshipName>Flight</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>