force-app/main/default/objects/Flight__c/validationRules/Cabbot_reach_before_Taking_Off.validationRule-meta.xml
<ValidationRule>
    <fullName>Cabbot_reach_before_Taking_Off</fullName>
    <active>true</active>
    <errorConditionFormula>Destination_Time__c  &lt;  Schedule__c</errorConditionFormula>
    <errorDisplayField>Destination_Time__c</errorDisplayField>
    <errorMessage>Bro what is your destination time</errorMessage>
</ValidationRule>