force-app/main/default/objects/Flight__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Delayed__c</columns>
    <columns>Status__c</columns>
    <columns>Start_Airport__c</columns>
    <columns>End_Airport__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>